--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     </script>
     <!-- Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
